WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48880
Iframes nested inside a compositing layer don't repaint correctly
https://bugs.webkit.org/show_bug.cgi?id=48880
Summary
Iframes nested inside a compositing layer don't repaint correctly
Simon Fraser (smfr)
Reported
2010-11-02 15:48:00 PDT
When iframes are nested inside a compositing layer, they don't repaint correctly on scrolling, resize etc.
Attachments
Patch
(9.64 KB, patch)
2010-11-02 15:52 PDT
,
Simon Fraser (smfr)
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2010-11-02 15:48:19 PDT
<
rdar://problem/8194698
>
Simon Fraser (smfr)
Comment 2
2010-11-02 15:52:10 PDT
Created
attachment 72753
[details]
Patch
Simon Fraser (smfr)
Comment 3
2010-11-02 16:13:16 PDT
http://trac.webkit.org/changeset/71182
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug